--- a/op_plugin/config/v2r0/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r0/op_plugin_functions.yaml
@@ -768,6 +768,10 @@ official:
    impl_ns: acl_op
  - func: inverse.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op
+ - func: isin.Tensor_Scalar(Tensor element, Scalar test_elements, *, bool assume_unique=False, bool invert=False) -> Tensor
+   impl_ns: acl_op, op_api
+ - func: isin.Tensor_Scalar_out(Tensor element, Scalar test_elements, *, bool assume_unique=False, bool invert=False, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: acl_op, op_api
  - func: isclose(Tensor self, Tensor other, float rtol=1e-05, float atol=1e-08, bool equal_nan=False) -> Tensor
    impl_ns: acl_op
  - func: isfinite(Tensor self) -> Tensor
@@ -1927,8 +1931,6 @@ unsupported:
   - frexp.Tensor_out
   - isin.Tensor_Tensor_out
   - isin.Tensor_Tensor
-  - isin.Tensor_Scalar_out
-  - isin.Tensor_Scalar
   - isin.Scalar_Tensor_out
   - isin.Scalar_Tensor
   - cholesky.out
