--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -126,6 +126,10 @@ official:
    impl_ns: acl_op, op_api
  - func: _unique2(Tensor self, bool sorted=True, bool return_inverse=False, bool return_counts=False) -> (Tensor, Tensor, Tensor)
    impl_ns: acl_op, op_api
+ - func: _unique(Tensor self, bool sorted=True, bool return_inverse=False) -> (Tensor, Tensor)
+   impl_ns: acl_op
+ - func: dequantize.self(Tensor self) -> Tensor
+   impl_ns: acl_op
  - func: abs(Tensor self) -> Tensor
    impl_ns: acl_op, op_api
  - func: abs.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
