--- a/op_plugin/config/v2r0/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r0/op_plugin_functions.yaml
@@ -1670,6 +1670,10 @@ official:
    impl_ns: acl_op
  - func: elu_(Tensor(a!) self, Scalar alpha=1, Scalar scale=1, Scalar input_scale=1) -> Tensor(a!)
    impl_ns: acl_op
+ - func: elu_backward.grad_input(Tensor grad_output, Scalar alpha, Scalar scale, Scalar input_scale, bool is_result, Tensor self_or_result, *, Tensor(a!) grad_input) -> Tensor(a!)
+   impl_ns: acl_op
+ - func: elu_backward(Tensor grad_output, Scalar alpha, Scalar scale, Scalar input_scale, bool is_result, Tensor self_or_result) -> Tensor
+   impl_ns: acl_op
  - func: silu(Tensor self) -> Tensor
    impl_ns: acl_op
  - func: silu_(Tensor(a!) self) -> Tensor(a!)
