--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -1424,6 +1424,12 @@ official:
    impl_ns: acl_op
  - func: sin_(Tensor(a!) self) -> Tensor(a!)
    impl_ns: acl_op
+ - func: sinc(Tensor self) -> Tensor
+   impl_ns: acl_op, op_api
+ - func: sinc.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: acl_op, op_api
+ - func: sinc_(Tensor(a!) self) -> Tensor(a!)
+   impl_ns: acl_op, op_api
  - func: sinh(Tensor self) -> Tensor
    impl_ns: acl_op, op_api
  - func: sinh.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
