--- a/op_plugin/config/v2r0/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r0/op_plugin_functions.yaml
@@ -648,6 +648,8 @@ official:
    impl_ns: acl_op
  - func: gather.out(Tensor self, int dim, Tensor index, *, bool sparse_grad=False, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op
+ - func: gcd.out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: acl_op
  - func: ge.Scalar(Tensor self, Scalar other) -> Tensor
    impl_ns: acl_op
  - func: ge.Scalar_out(Tensor self, Scalar other, *, Tensor(a!) out) -> Tensor(a!)
@@ -777,6 +779,10 @@ official:
  - func: isclose(Tensor self, Tensor other, float rtol=1e-05, float atol=1e-08, bool equal_nan=False) -> Tensor
    impl_ns: acl_op
  - func: isfinite(Tensor self) -> Tensor
+   impl_ns: acl_op
+ - func: isposinf.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: acl_op
+ - func: isneginf.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op
  - func: kthvalue(Tensor self, int k, int dim=-1, bool keepdim=False) -> (Tensor values, Tensor indices)
    impl_ns: acl_op
