--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -869,13 +869,13 @@ official:
  - func: log_sigmoid.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: log_sigmoid_backward(Tensor grad_output, Tensor self, Tensor buffer) -> Tensor
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: log_sigmoid_backward.grad_input(Tensor grad_output, Tensor self, Tensor buffer, *, Tensor(a!) grad_input) -> Tensor(a!)
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: log_sigmoid_forward(Tensor self) -> (Tensor output, Tensor buffer)
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: log_sigmoid_forward.output(Tensor self, *, Tensor(a!) output, Tensor(b!) buffer) -> (Tensor(a!), Tensor(b!))
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: log_softmax.Dimname(Tensor self, Dimname dim, *, ScalarType? dtype=None) -> Tensor
    impl_ns: acl_op
  - func: log_softmax.int(Tensor self, int dim, ScalarType? dtype=None) -> Tensor
