--- a/op_plugin/config/v2r0/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r0/op_plugin_functions.yaml
@@ -397,7 +397,7 @@ official:
  - func: ceil_(Tensor(a!) self) -> Tensor(a!)
    impl_ns: acl_op
  - func: channel_shuffle(Tensor self, int groups) -> Tensor
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: clamp(Tensor self, Scalar? min=None, Scalar? max=None) -> Tensor
    impl_ns: acl_op
  - func: clamp.out(Tensor self, Scalar? min=None, Scalar? max=None, *, Tensor(a!) out) -> Tensor(a!)
