--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -1559,7 +1559,7 @@ official:
  - func: tanh.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: tanh_(Tensor(a!) self) -> Tensor(a!)
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: tanh_backward(Tensor grad_output, Tensor output) -> Tensor
    impl_ns: acl_op, op_api
  - func: tanh_backward.grad_input(Tensor grad_output, Tensor output, *, Tensor(a!) grad_input) -> Tensor(a!)
@@ -1571,7 +1571,7 @@ official:
  - func: threshold_(Tensor(a!) self, Scalar threshold, Scalar value) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: threshold_backward(Tensor grad_output, Tensor self, Scalar threshold) -> Tensor
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: topk(Tensor self, int k, int dim=-1, bool largest=True, bool sorted=True) -> (Tensor values, Tensor indices)
    impl_ns: acl_op, op_api
  - func: topk.values(Tensor self, int k, int dim=-1, bool largest=True, bool sorted=True, *, Tensor(a!) values, Tensor(b!) indices) -> (Tensor(a!) values, Tensor(b!) indices)
